fix user page buttons on smaller screens, refactor to dropdown items in navbar dropdown
Former-commit-id: f7a6f5be786f70c2bbac748463d423b78271b840

--- a/Code/courseai/static/css/style.css
+++ b/Code/courseai/static/css/style.css
@@ -907,10 +907,12 @@ wrapper {
 
 }
 
-.btn-container > button {
-    width: calc(90% / 2);  
-    display: inline-block;
-    margin: 2%;
+.btn-container button {
+    width: 70px;
+}
+
+.btn-load {
+    margin-right: 10px;
 }
 
 /* ----- CARD PLANNER COLORS - note: ORDER MATTERS! ----- */
